@@ -1,27 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST hwids-20140317.tar.gz 1622637 SHA256 1a728b0881005b08669b138efe791b970b9b855e03d1ed665598b72ef551afba SHA512 a4dbbc5c39bbf55645214f96ef5338224f273c6120b9c155919a3fd194477c2cc47c2651723ad425b955c284ee81391175d3e6626955968a5ebf406f8592f156 WHIRLPOOL b4a479b24008a7ac80262b524a90ed99411ef6c733eadbc35789596f44eb8d90956ec9775141839aeecd871908befbb05fa20181b2ef68c6ebf68e5726bb10b7
 DIST hwids-20141010.tar.gz 1678967 SHA256 2e8d45ef56a086d2e432c05ae348584325f87353c154d3ede294bad5aeba0f27 SHA512 992314a03a745b5766ccbd86c169c67c03f05ffd36188b0a19e6e7c16be2897da820bca471408a2e3834021fab4a995a5316f45b251bf5cff21003f9ffe2e23f WHIRLPOOL f3af13cf659fc5195d3eb167221d9bf04f1431fd19d071d37f7a8c30a1e020589b4e337174f7c3b6985a4869d60618da88226b47f185679a7ffc42ef270a5820
-EBUILD hwids-20140317.ebuild 1367 SHA256 c5ac67f9095efbf7e99f302e4c0c78ac12398f6e66327f2d3bb3475c843d01a5 SHA512 50d798071ae92432619570726d19cc50f713946f800fdb78cb4c3eea1660d83a4559ff3da71fc79e0305a6076561bb364c1afdfd6e22983698acd6dda742a12f WHIRLPOOL 7cdf191342a8e1f82de2330cff2fb3975ffeaff60f15f385f2a753de35769a4a39c506f244642595b7ed3cede631f2c72c9a0d97302b54db44a65a6c19b3fce8
+DIST hwids-20141110.tar.gz 1684662 SHA256 31145832799ff19bc654b2c227d732567d242f9f790ee14313ccec542d2f582f SHA512 c7fa1e38656ca02c5b316bad83590296dcc199985fc8a5a413b7ac46cef325bbb0a3aea60e2f1f250891b43cf38b0a8d477ef546e7cb13e06562fd1f31b23d4a WHIRLPOOL 2136bd4fb437da9d78b0610a1143e4becddc1949cbdad0b09b62314eb028c42a5af83c3b7b13122ce30bea34e9703be3ca819d315bbe75019bf8d7990501f49c
 EBUILD hwids-20141010.ebuild 1594 SHA256 3c670fa4cdc9f55340a22d2e6fada9d162ab52db57204ee3a3cea10d4920cc4a SHA512 b88800a9ee3edfc5f62a48f053065a127938cde2916b87526accf027aa2caefcffdf1202a0a115d67619581858003937335ca3f26ec2aeaf6527b59d372ca61d WHIRLPOOL ea4be96e7d1fd13c3bba18d4e01d4729dd9edd0d23c211f3503dbe7c2ec0307ffbc48a10fda87a7a7e8bce752d7c1c3d2ea5929fe0011b1b4d7d1fee882869df
+EBUILD hwids-20141110.ebuild 1610 SHA256 d4ef6aceb602ed4e7244ab44c177cc6222171c6833bc10fd2e108838c0cc1307 SHA512 bbfae14d1ff0f89bc9d74eae7de52f1db23aa4d7dee1ce3969020ab2bc7e2351be2c588a08ddfb280a728532a0cdd8017ba11fdfe83e8cfb72f9266fb972d356 WHIRLPOOL aaf4d0bb49d130d78dacb6374352e44b41c26f5e8169e20c32db5c747a9119de23a2b871e19ea29a05de8e02c5d3a0d6690c358ab8b1e5bf274142f5975fc74b
 EBUILD hwids-99999999.ebuild 1608 SHA256 46cc39c3e80c4e6e890f0572060df9479dca5b9bc61d7497aa6a6023869d11fe SHA512 d0196f4ea43274318269bb62b6bb056c0442fe5b00922e83de38944a3e26921e781d8e5cbe71b2085c7c07e292038722175230ae3889b2c7ec99634253785098 WHIRLPOOL 0428e324f25319db208c67aa5128528fb0fe16b6f607114ad7ea0ea3412d00c9767955f1e339e01f95b0997dce0fef26d8c431d037747806fc32eb9f97dbe74d
-MISC ChangeLog 22947 SHA256 a0247736a68459b8646cc42287176a0cf463f09b8c61446db2ea6159c75f3706 SHA512 dea6e08dfc214a3794b89d9739873600c4ede472541fd114280626c351fa5249b193a947824b3a7791855d61ab800e0ee84c3238f2f727bb23865c4112bb3913 WHIRLPOOL 143e6d2b01326b53cba33ae2fa20a787ba877e195a0e37992338ced18936e675461056a80729e078146d3f4cab27a7f1469fa3a8ce5fb15bf4a1966bdfccf0ef
+MISC ChangeLog 23116 SHA256 7241ec1ffc20aa20e931f41fd947d2ca888924d9c6eb504bedb1aba6f814ce46 SHA512 cebfa191c42ca9885e5011f995931fc517a5f79fea3550ac10e52d5d5ba3f9a2782c684e43247e052eef06c1b0044d780b2fd07957f3f6be369d591569658106 WHIRLPOOL eb7997d4b1d695cf4576852644956329edfc390c990591c848cf9ea3012ed1f208957d9b7e41b190c9e2e47a39f9133d4591d26df6d1e3ed830ce49d75358fd9
 MISC metadata.xml 535 SHA256 4f40d8a522aed15ebd5f28f7f768c38332fa096b1d19a27c88003a042c69797e SHA512 d4c2a3334c6622739bf68dfefe3e3b8408c7c9e2ca32180d82466f507b1ecba460d76d33a5825e4a2de4710c6db0b32d21ace2fda1ad3590225dcb986a7ddf86 WHIRLPOOL f4368ca4eed4e8be9a0f32f7e8c723bd2bbe736a94f7565d27af2e23bffb04cafd1e59f5582d3ca860499c95e62c717de0b0ba44a42b259d82802255747b318f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUQ0LEAAoJEPGu1DbS6WIACz8P/1E5o6ixir8f5kWGa8GRv2KH
-ztff/8NtWexj413Wc+3Ro4Xm1QrMBfD+0FNRolqSEB3R65E7ZbBvs7HzPZaWWQRL
-L4cbhmghb25rzYamu1VQVljPvfbP9fhQzKjobzMzAyyxt1mD5KDvY0WQdaLlYdcd
-D7Zs7wLhyVsAMk5C2a8tTdbfMot0R+6UzfHPYl0T+hFLkwYyVzydWY8pcvBNbMrL
-yOtzxV81j9nyVWbohq+67Zf1YMo2Pi9GOfywkGr60MEXftLI2XqOuOkL692d71yo
-ZRHOr4m4ByDY2StpDUxUNXNLcZwAPL4LVDhhZhRVl7LRQ0qPcJiE8w4BtA8/LDPQ
-GGX5tyQv+3HBQz1DVvMRL4DIMLTADcXciCtUsoYsagQIaHhhBu1itLM+4Htx8S9b
-n36XafWPrNPKmoeTqnOhO0SDVpBJ9TjT4v83HdE0vYhryU2VngmGFZCFH7tpFqEG
-FI2gdDVCCk0CKJLKOZ74RFCv7LgGm4oZsMnYFzh6oS73LrvGMIi5pe68qmWdVAA0
-WRBXGROldAchxKPoCpuVfW/UBLcWULndk2R4CGhlPiKj1AmCxq4HXOo6rrzJ4yTZ
-R5tBtqWsGQk5WGCszeXnfh+CL5e1JzIY3fj7yfYOfFDfjANtLB+3nm6fPb7cQul0
-z7EK5iCjExKhoi82UO5Y
-=Dx0l
+iQEcBAEBCAAGBQJUYO8vAAoJEBzRPIrUMBNCZwkH/02jxqpl/BV+wy9ELT7TdnwG
+Hh8ZSIpK/2eWTw97BQkICez7nXTp4VJmJ5u3VeuYFyWV/hEW2T+CKn0wFagwUQ7p
+YgHYVitLFYGim8FTMBvqPNl44/ajT6ZKFxTOnWd+JIsAnZWhXdX0X3mQTTpPwh3Y
+JKPfT5TW59v+eWcJ7FqGIVSknwK7kblnjsxTJM25RjubpZyAm0GlxcNYPPl4x0HA
+MuztqbuNV/W/PcJFBCWLAyxSe0RuQ51ADNOwnVl2EJoVbR728XF4LZAM4bU6+Xys
+c3nCuLDNY1HY3VpoFiNk4Fd+mYf5ugF/roaSAOKfgdgQKa/hENsKiTyE+D1iC24=
+=ZnMD
 -----END PGP SIGNATURE-----
