@@ -1,38 +1,55 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwids/hwids-20140317.ebuild,v 1.4 2014/05/30 14:38:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwids/hwids-20141110.ebuild,v 1.1 2014/11/10 17:00:24 flameeyes Exp $
 
 EAPI=5
 inherit udev eutils
 
 DESCRIPTION="Hardware (PCI, USB, OUI, IAB) IDs databases"
 HOMEPAGE="https://github.com/gentoo/hwids"
-SRC_URI="https://github.com/gentoo/hwids/archive/${P}.tar.gz"
+if [[ ${PV} == "99999999" ]]; then
+	EGIT_REPO_URI="${HOMEPAGE}.git"
+	inherit git-2
+else
+	SRC_URI="${HOMEPAGE}/archive/${P}.tar.gz"
+	KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~amd64-linux ~arm-linux ~x86-linux"
+fi
 
 LICENSE="|| ( GPL-2 BSD ) public-domain"
 SLOT="0"
-KEYWORDS="alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~amd64-linux ~arm-linux ~x86-linux"
-IUSE="+udev"
+IUSE="+net +pci +udev +usb"
 
 DEPEND="udev? (
 	dev-lang/perl
 	>=virtual/udev-206
 )"
+[[ ${PV} == "99999999" ]] && DEPEND+=" udev? ( net-misc/curl )"
 RDEPEND="!<sys-apps/pciutils-3.1.9-r2
 	!<sys-apps/usbutils-005-r1"
 
 S=${WORKDIR}/hwids-${P}
 
 src_prepare() {
+	[[ ${PV} == "99999999" ]] && emake fetch
+
 	sed -i -e '/udevadm hwdb/d' Makefile || die
 }
 
+_emake() {
+	emake \
+		NET=$(usex net) \
+		PCI=$(usex pci) \
+		UDEV=$(usex udev) \
+		USB=$(usex usb) \
+		"$@"
+}
+
 src_compile() {
-	emake UDEV=$(usex udev)
+	_emake
 }
 
 src_install() {
-	emake UDEV=$(usex udev) install \
+	_emake install \
 		DOCDIR="${EPREFIX}/usr/share/doc/${PF}" \
 		MISCDIR="${EPREFIX}/usr/share/misc" \
 		HWDBDIR="${EPREFIX}$(get_udevdir)/hwdb.d" \
@@ -43,9 +60,6 @@ pkg_postinst() {
 	if use udev; then
 		udevadm hwdb --update --root="${ROOT%/}"
 		# http://cgit.freedesktop.org/systemd/systemd/commit/?id=1fab57c209035f7e66198343074e9cee06718bda
-		if [[ ${ROOT} != "" ]] && [[ ${ROOT} != "/" ]]; then
-			return 0
-		fi
-		udevadm control --reload
+		[ "${ROOT:-/}" = "/" ] && udevadm control --reload
 	fi
 }
